# crazyflie-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  arena_selector.py  c.sh  config.xml  config.xml.in  container.sh  gen_config.py  launch.sh  listen.sh  nohup.out  run.sh
arenas/: arena0.xml  arena1.xml  arena2.xml  arena3.xml  arena4.xml  arena5.xml
doc/: doxygen-config
include/: Brain.hpp  CameraData.hpp  Chn.hpp  Conn.hpp  Constants.hpp  Decoder.hpp  FlowDeck.hpp  MathUtils.hpp  Proxy.hpp  Quat.hpp  RSSIBeacon.hpp  RTStatus.hpp  SafePrint.hpp  SensorData.hpp  SharedQueue.hpp  UUID.hpp  Vec3.hpp  Vec4.hpp  gen_buf.hpp  imu_types.hpp  radiolink.hpp  stabilizer_types.hpp
include/cmd/: T.hpp
include/conn/: Conn.hpp
include/conn/state/: T.hpp
include/exploration/: imu_types.hpp  median_filter.hpp  p2p.hpp  sgba.hpp  stabilizer_types.hpp  state_machine.hpp  wall_following.hpp  wall_following_with_avoid.hpp
include/porting/: porting.hpp
include/sgba/: median_filter.hpp  sgba.hpp
src/: Brain.cpp  Conn.cpp  Decoder.cpp  Decoder.hpp  MathUtils.cpp  Proxy.cpp  RSSIBeacon.cpp  RTStatus.cpp  RTStatus.hpp  SafePrint.cpp  UUID.cpp  conn.cpp  main.cpp  math_supp.hpp  porting.cpp  sgba.cpp  state_machine.cpp  wall_following.cpp  wall_following_with_avoid.cpp
src/conn/: Conn.cpp
src/sgba/: state_machine.cpp
